--- a/Cleaning Service/Cleaning Service.csproj
+++ b/Cleaning Service/Cleaning Service.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Sharprompt" Version="2.4.1" />
+  </ItemGroup>
+
 </Project>
